--- a/src/Alura.SubastaOnline.WebApp/Alura.SubastaOnline.WebApp.csproj
+++ b/src/Alura.SubastaOnline.WebApp/Alura.SubastaOnline.WebApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\EFCore\CategoriasDaoConEFCore.cs~RFb5fd4b.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
